--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1853,6 +1853,9 @@
     <ClCompile Include="UVa\10200\10299.cpp">
       <Filter>UVaOJ\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10800\10820.cpp">
+      <Filter>UVaOJ\10800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
