--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1859,6 +1859,9 @@
     <ClCompile Include="UVa\300\382.cpp">
       <Filter>UVaOJ\300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\200\294.cpp">
+      <Filter>UVaOJ\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
