--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1871,6 +1871,9 @@
     <ClCompile Include="UVa\400\455.cpp">
       <Filter>UVaOJ\400\450</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10200\10298.cpp">
+      <Filter>UVaOJ\10200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
