--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1874,6 +1874,9 @@
     <ClCompile Include="UVa\10200\10298.cpp">
       <Filter>UVaOJ\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10679.cpp">
+      <Filter>UVaOJ\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
