--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -2229,6 +2229,7 @@
     <ClInclude Include="Library\bits\stdc++.h" />
     <ClInclude Include="Library\dp_algs.h" />
     <ClInclude Include="Library\header.h" />
+    <ClInclude Include="Library\max_flow.h" />
     <ClInclude Include="Library\primes.h" />
     <ClInclude Include="Library\util.h" />
   </ItemGroup>
