--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1883,6 +1883,9 @@
     <ClCompile Include="UVa\11400\11475.cpp">
       <Filter>UVaOJ\11400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\800\820.cpp">
+      <Filter>UVaOJ\800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
