--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1886,6 +1886,9 @@
     <ClCompile Include="UVa\800\820.cpp">
       <Filter>UVaOJ\800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10330.cpp">
+      <Filter>UVaOJ\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
