--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1904,6 +1904,9 @@
     <ClCompile Include="UVa\10700\10731.cpp">
       <Filter>UVaOJ\10700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11500\11504.cpp">
+      <Filter>UVaOJ\11500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
