strongly connected components

--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1910,6 +1910,9 @@
     <ClCompile Include="UVa\11800\11838.cpp">
       <Filter>UVaOJ\11800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\200\247.cpp">
+      <Filter>UVaOJ\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
