--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1922,6 +1922,9 @@
     <ClCompile Include="UVa\10000\10080.cpp">
       <Filter>UVaOJ\10000\10080</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11100\11045.cpp">
+      <Filter>UVaOJ\11000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
