--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1925,6 +1925,9 @@
     <ClCompile Include="UVa\11100\11045.cpp">
       <Filter>UVaOJ\11000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10700\10746.cpp">
+      <Filter>UVaOJ\10700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
